--- a/oldal.html
+++ b/oldal.html
@@ -12,7 +12,7 @@
     <script src="aSzámolás.js"></script>
     <script src="nighttheme.js"></script>
     <link type="text/css" rel="stylesheet" href="style.css" id="style" />
-    <title>oldal</title>
+    <title>Hiperkalkulátor</title>
   </head>
   <body>
     <div class="container-fluid">
