--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <title>Hiperkalkulátor</title>
   </head>
   <body>
+
     <div class="container-fluid">
+        <button class="btn btn-lg btn-block"  onclick="nightvision()"><span>HIPERKALKULÁTOR</span></button>
       <div class="row">
         <!--Téglalap (t)-->
         <div class="col-sm-12 col-md-6 col-xl-3">
@@ -314,9 +316,6 @@
           </div>
         </div>
       </div>
-      <button type="button" class="btn btn-sm" onclick="nightvision()">
-        Night vision
-      </button>
     </div>
   </body>
 </html>
