--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
     <title>Hiperkalkulátor</title>
   </head>
   <body>
-
     <div class="container-fluid">
-        <button class="btn btn-lg btn-block"  onclick="nightvision()"><span>HIPERKALKULÁTOR</span></button>
+      <button class="btn btn-lg btn-block" onclick="nightvision()">
+        <span>HIPERKALKULÁTOR</span>
+      </button>
       <div class="row">
         <!--Téglalap (t)-->
-        <div class="col-sm-12 col-md-6 col-xl-3">
+        <div class="col-sm-6 col-md-6 col-xl-3">
           <div class="card text-center bg">
             <h2 class="card-title text-center">Téglalap</h2>
             <img
@@ -94,7 +95,7 @@
         </div>
 
         <!--Hatszög (h)-->
-        <div class="col-sm-12 col-md-6 col-xl-3">
+        <div class="col-sm-6 col-md-6 col-xl-3">
           <div class="card text-center bg">
             <h2 class="card-title text-center">Hatszög</h2>
             <img
@@ -153,7 +154,7 @@
         </div>
 
         <!--TéglaTest (tt)-->
-        <div class="col-sm-12 col-md-6 col-xl-3">
+        <div class="col-sm-6 col-md-6 col-xl-3">
           <div class="card text-center bg" style="border-radius: 20px">
             <h2 class="card-title text-center">Téglatest</h2>
             <img
@@ -244,7 +245,7 @@
         </div>
 
         <!--Szabályos gúla-->
-        <div class="col-sm-12 col-md-6 col-xl-3">
+        <div class="col-sm-6 col-md-6 col-xl-3">
           <div class="card text-center bg" style="border-radius: 20px">
             <h2 class="card-title text-center">Négyzet alapú gúla</h2>
             <img
